Adicionado novo json e definiçoes e .h e .main

--- a/matriz_de_leds/.vscode/settings.json
+++ b/matriz_de_leds/.vscode/settings.json
@@ -38,6 +38,8 @@
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
         "matriz_de_leds.pio.h": "c",
-        "stdlib.h": "c"
-    }
+        "stdlib.h": "c",
+        "pio.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
